fix: Adapt tests to java 8 [DHIS2-13981]